--- a/spark/san_francisco_fire_calls.ipynb
+++ b/spark/san_francisco_fire_calls.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU7goSxMRsJbHaEXdwsplP",
+      "authorship_tag": "ABX9TyPyP5CkkyeVp/5IZhjJoDbW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         }
       ],
       "source": [
-        "!pip install pyspark"
+        "# !pip install pyspark"
       ]
     },
     {
@@ -68,7 +68,7 @@
         "\n",
         "spark = SparkSession \\\n",
         "                    .builder \\\n",
-        "                    .appName('Eng. dados - Tecnologia de Big Data - aula 2.2') \\\n",
+        "                    .appName('SF fire calls') \\\n",
         "                    .getOrCreate()\n",
         "\n",
         "spark.version"
